tests/errors/if_assign_missing_parenthesese_errors.ctp


def (main:
    x:mut = 5
    if (x = 6:
        pass
    )
)
    
